<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title_confirme_bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tv_title_confirm_bet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/label_game_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_confirme_bet" />
    <TextView
        android:id="@+id/tv_game_mode"
        android:layout_width="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_game_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_name" />

    <TextView
        android:id="@+id/tv_label_your_bets"
        android:layout_width="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_bets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_mode" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bets_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="86dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_your_bets" />

    <Button
        android:id="@+id/btn_confirmar_bet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/tv_btn_confirm_bet"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/rv_bets_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/rv_bets_confirmation" />

    <Button
        android:id="@+id/btn_cancelar_bet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red"
        android:text="@string/tv_btn_cancel_bet"
        app:layout_constraintEnd_toEndOf="@+id/rv_bets_confirmation"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/rv_bets_confirmation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>