<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/the_green">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_apostar_em"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_summoner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Shermanooo" />

    <ImageView
        android:id="@+id/iv_summoner_profile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_profile"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_summoner_name"
        tools:src="@drawable/yasuo_profile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/label_match_type"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_summoner_profile" />

    <TextView
        android:id="@+id/tv_tipo_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="Ranked Solo/Duo"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
        android:id="@+id/tv_bet_picker_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/label_bet_type"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_tipo_partida"
        app:layout_constraintStart_toStartOf="@+id/tv_tipo_partida"
        app:layout_constraintTop_toBottomOf="@+id/tv_tipo_partida" />

    <ProgressBar
        android:id="@+id/loading_bets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_avancar"
        app:layout_constraintEnd_toEndOf="@+id/tv_tipo_partida"
        app:layout_constraintStart_toStartOf="@+id/tv_tipo_partida"
        app:layout_constraintTop_toBottomOf="@+id/tv_bet_picker_Label"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_avancar"
        app:layout_constraintEnd_toEndOf="@+id/tv_tipo_partida"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/tv_tipo_partida"
        app:layout_constraintTop_toBottomOf="@+id/tv_bet_picker_Label"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_bet" />

    <Button
        android:id="@+id/btn_avancar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:backgroundTint="@color/white"
        android:textColor="@color/the_green"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:elevation="8dp"
        android:text="@string/btn_avancar"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>